Closed Bug 1188758 Opened 10 years ago Closed 10 years ago

When an invalid init segment is received, the TrackBuffersManager will not discard it

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: jya, Assigned: jya)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When an appendBuffer is done with an init segment that is invalid it is not discarded. The TrackBuffersManager::mInitData is replaced as soon as a new init segment is detected, without first checking if it is valid or not. If this was the first init segment received, and a new init segment is appended again, the old (and incorrect) one will be used.
Assignee: nobody → jyavenard
Attachment #8640339 - Flags: review?(gsquelart) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: