Bug 1188758: [MSE] Only use init segment if known to be valid. r=gerald